--- a/src/assets/css/component.gallery.css
+++ b/src/assets/css/component.gallery.css
@@ -5,7 +5,7 @@
   max-width: 2000px;
   column-count: 1;
   padding: 0 0.62rem;
-  margin: 0 auto 3rem auto;
+  margin: 0 auto 6rem auto;
 
   @media (min-width: 650px) {
     column-count: 2;
